# complex-numbers

./: CMakeLists.txt  README.md  main.cpp
libraries/: CMakeLists.txt
libraries/complex/: CMakeLists.txt
libraries/complex/include/: complex.hpp
libraries/complex/src/: CMakeLists.txt  complex.cpp
libraries/complex/tests/: CMakeLists.txt  tests.cpp
libraries/expression/: CMakeLists.txt
libraries/expression/include/: IExpression.hpp  bin_operation.hpp  bin_operations.hpp  expression.hpp  primitives.hpp  un_operation.hpp  un_operations.hpp
libraries/expression/src/: CMakeLists.txt  abstract_operations.cpp  bin_operations.cpp  primitives.cpp  un_operations.cpp
libraries/expression/tests/: CMakeLists.txt  tests.cpp
